Took padding off of .wrapper div on mobile landscape and below screen sizes to fix minor resposive design bug

--- a/wordpress/wp-content/themes/ripple/assets/css/ripple.css
+++ b/wordpress/wp-content/themes/ripple/assets/css/ripple.css
@@ -5710,6 +5710,7 @@ p.author-bio {
     padding: 0;
   }
   .wrapper {
+    padding: 0;
     width: 440px;
   }
   .logo {
