--- a/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
+++ b/wordpress/wp-content/themes/ripple/assets/less/wordpress.less
@@ -1896,6 +1896,7 @@ body {
     padding: 0;
 }
 .wrapper {
+    padding: 0;
     width: 440px;
 }
 // Mobile Landscape Header
